Bug 652379 - place:folder=-1 returns a non-empty result. r=dietrich